/*
 * $Id: ChangeLog,v 1.472 2002/10/30 04:08:41 paultucker Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-10-31 17:00 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/tget.prg
    ! Fix ::DeleteEnd() method.
      It didn't erase the last character.
      Reported by Luiz Rafael Culik.

2002-10-29 21:21 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtwin/gtwin.c
    * modified by Robert Haley <rhaley@cheshire.net> to allow Tone()
    * to work correctly under Win9x.
    * Win9x Tone() support currently only for Borland and MSVC compilers.
    * The only issue for the moment, is if the calculation of TICKS is
    * incorrect for other compilers.  SEE dTicks in hb_gt_Tone().
    * Someone may wish to adapt the code above hb_gt_tone() in gtwin.c
    * for other compilers.
  * makefile.vc
    * slight re-ordering
  + makefile.nt
  * make_vc.bat
    * if building Harbour under NT, use the alternate makefile.nt
    * for faster builds.

2002-10-29 23:30 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/memoedit.prg
    source/rtl/teditor.prg
    % CRTL_W key is now an Valid Save key for memoedit Function 

2002-10-26 17:30 UTC-0300 Marcelo Lombardo <lombardo@uol.com.br>
  * source/vm/dymsym.c
    + added Workaround for Symbol table lenght limited up to 10 chars
      this can be turned on by defining HB_SYMLIMIT_10_WORKAROUND

2002-10-27 11:30 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * include/hbapierr.h
    include/hbapirdd.d
    include/hbapi.h
    include/hbvm.h
    include/hbtrace.h
    include/hbdate.h
    include/hbapilng.h
    include/hbapifs.h
    include/hbstack.h
    include/hbset.h
    source/rdd/dbcmd.c
    source/vm/dymsym.c
    source/vm/arrays.c
    source/vm/hvm.c
    source/common/hbtrace.c
    source/common/hbstr.c
    source/common/hbffind.c