@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.472 2002/10/30 04:08:41 paultucker Exp $
+ * $Id: ChangeLog,v 1.473 2002/10/31 20:27:15 walito Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-11-04 09:20 UTC-0300 Marcelo Lombardo <lombardo@uol.com.br>
+  * source/macro/macro.y
+    + added support for If() function in macro execution with optional 3th 
+      parameter, as Cl*pper does : if(<lCondition>,<uResult1>,[<uResult2>])
 
 2002-10-31 17:00 UTC-0300 Walter Negro <anegro@overnet.com.ar>
   * source/rtl/tget.prg
